Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70295

Pairing variant 0 not handled by QtBluetooth Android

XMLWordPrintable

    • Android
    • f8c0572ddcd0cf152cfcf9f1d5478e520a6a457e (qt/qtconnectivity/5.12)

      During automatic pairing of bluetooth some gives an error:
      qt.bluetooth.android: Unknown pairing variant: 0
      It seem that the variant 0 is not handled in:
      https://github.com/GarageGames/Qt/blob/master/qt-5/qtconnectivity/src/bluetooth/android/localdevicebroadcastreceiver.cpp

        For Gerrit Dashboard: QTBUG-70295
        # Subject Branch Project Status CR V

            ablasche Alex Blasche
            karimpinter Karim Pinter
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes